# llvm-tutor

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile_archlinux  Dockerfile_fedora  Dockerfile_ubuntu  Dockerfile_ubuntu_apt  LICENSE  README.md  output.ll  test-licm.ll
.github/workflows/: apple-silicon-llvm-from-sources.yml  apple-silicon.yml  build-docker-image.yml  docker-archlinux.yml  docker-fedora.yml  docker-ubuntu.yml  docker-ubunut-apt.yml  x86-darwin-llvm-from-sources.yml  x86-darwin.yml  x86-ubuntu-llvm-from-sources-static.yml  x86-ubuntu-llvm-from-sources.yml  x86-ubuntu.yml  x86-windows-llvm-from-sources.yml
HelloWorld/: CMakeLists.txt  CMakeLists.txt_for_windows  HelloWorld.cpp
SimpleLICM/: CMakeLists.txt  SimpleLICM.cpp
include/: ConvertFCmpEq.h  DuplicateBB.h  DynamicCallCounter.h  FindFCmpEq.h  FunctionArgumentUsagePass.h  InjectFuncCall.h  MBA.h  MBAAdd.h  MBASub.h  MergeBB.h  OpcodeCounter.h  RIV.h  Ratio.h  StaticCallCounter.h  Utils.h
inputs/: input_for_LVN.c  input_for_cc.c  input_for_duplicate_bb.c  input_for_fcmp_eq.c  input_for_fnargusage.c  input_for_hello.c  input_for_inject.c  input_for_mba.c  input_for_mba_sub.c  input_for_riv.c  loop-invariant.ll  matmul_canonical.c  matmul_canonical.ll
lib/: AffineRecurrence.cpp  CMakeCache.txt  CMakeLists.txt  ConvertFCmpEq.cpp  DerivedInductionVar.cpp  DerivedInductionVarElim.cpp  DuplicateBB.cpp  DynamicCallCounter.cpp  DynamicCallCounterRT.cpp  FindFCmpEq.cpp  FunctionArgumentUsagePass.cpp  FunctionArgumentUsagePrinterPass.cpp  InjectFuncCall.cpp  LVN.cpp  MBA.cpp  MBAAdd.cpp  MBASub.cpp  Makefile  MergeBB.cpp  OpcodeCounter.cpp  README.md  RIV.cpp  Ratio.cpp  SimpleLICM-skeleton.cpp  SimpleLICM.cpp  StaticCallCounter.cpp  cmake_install.cmake
lib/HelloWorld/: Makefile  cmake_install.cmake
lib/lib/: Makefile  cmake_install.cmake
lib/lt-cc/: CMakeLists.txt  DynamicCallCounter.cpp  StaticCallCounter.cpp  Utils.cpp
lib/lt-cc-rt/: CMakeLists.txt  DynamicCallCounterRT.cpp
lib/test/: Makefile  cmake_install.cmake  lit.site.cfg.py
lib/tools/: Makefile  cmake_install.cmake
outputs/: matmul_licm.ll
test/: CMakeLists.txt  ConvertFCmpEq.ll  ConvertFCmpEqPreds.ll  ConvertFCmpEq_exec.ll  DuplicateBB.ll  DuplicateBB_MergeBB_exec.ll  DuplicateBB_add.ll  DuplicateBB_exec.ll  DuplicateBB_float.ll  DuplicateBB_global.ll  DuplicateBB_ratio.ll  DuplicateBB_ratio2.ll  DuplicateBB_switch.ll  DynamicCallCounter.ll  DynamicCallCounterTest1.ll  DynamicCallCounterTest2.ll  DynamicCallCounterTest3.ll  FindFCmpEq.ll  FindFCmpEq_float.ll  FindFCmpEq_float_compare.ll  FindFCmpEq_float_non_compare.ll  FindFCmpEq_int_compare.ll  LVN_constant.ll  LVN_cse.ll  LVN_redundant_loads.ll  MBA.c  MBA.ll  MBA_add.ll  MBA_add_32bit.ll  MBA_add_8bit.ll  MBA_add_exec.ll  MBA_add_ratio.ll  MBA_add_ratio2.ll  MBA_exec.c  MBA_exec.ll  MBA_ratio.ll  MBA_ratio2.ll  MBA_sub.ll  MBA_sub_exec.ll  MergeBB_conditional_branch_merged.ll  (+33 more)
test/Inputs/: CallCounterInput.ll  FCmpEqInput.ll
test/llvm/: always-inline.ll  dce.ll  licm.ll  loop-deletion.ll  memcpyopt.ll  reassociate.ll  slp_aarch64.ll  slp_x86.ll
test_examples/: MBA.c  example_1.c
tools/: CMakeLists.txt  DynamicMain.cpp  StaticMain.cpp
tools/lt-cc/: CMakeLists.txt  config.h.cmake  lt-cc-main.cpp
utils/: static_registration.sh
